--- a/app/src/main/res/drawable/shape_rectangle_white.xml
+++ b/app/src/main/res/drawable/shape_rectangle_white.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+    <item android:width="334dp" android:height="38dp">
         <shape android:shape="rectangle">
-            <corners android:radius="8dp" />
+            <corners android:radius="10dp" />
             <solid android:color="#ffffff" />
-
         </shape>
     </item>
 </selector>
