--- a/app/src/main/res/layout/activity_data_usage.xml
+++ b/app/src/main/res/layout/activity_data_usage.xml
@@ -4,78 +4,125 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_200"
     tools:context=".activity.components.DataUsageActivity">
 
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/coordinator"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appbar"
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:background="@drawable/top_background" />
+
+        <com.example.myapplication.widget.CustomTitleBarViewGroup
+            android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:elevation="0dp"
-            android:background="@drawable/top_background"
-            >
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:paddingStart="13dp"
+            android:paddingEnd="13dp"
+            android:textColor="#333333"
+            app:back_src="@drawable/arrow_white"
+            app:imageHeight3="16dp"
+            app:imageWidth3="8dp"
+            app:layout_collapseMode="pin"
+            app:right_imageHeight3="20dp"
+            app:right_imageWidth3="22dp"
+            app:right_src="@drawable/service"
+            app:title="流量查询" />
 
-            <LinearLayout
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/coordinator"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="62dp"
+
+            app:layout_constraintLeft_toLeftOf="@id/tvTitle"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle">
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll"
-                android:orientation="vertical">
-                <com.example.myapplication.widget.CustomTitleBarViewGroup
-                    android:id="@+id/tvTitle"
+                android:background="@android:color/transparent"
+                app:elevation="0dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:paddingStart="13dp"
-                    android:paddingEnd="13dp"
+                    android:layout_marginStart="27dp"
+                    app:layout_scrollFlags="scroll"
+                    tools:ignore="ExtraText">
+
+                    <!-- 在这里添加你的约束布局内容 -->
+                    <TextView
+                        android:id="@+id/tvMainTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:gravity="center"
+                        android:text="乐享4G套餐59元"
+                        android:textColor="#fffbf7"
+                        android:textSize="15sp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:layout_width="6dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:src="@drawable/arrow_white_right"
+                        app:layout_constraintBottom_toBottomOf="@id/tvMainTitle"
+                        app:layout_constraintLeft_toRightOf="@id/tvMainTitle"
+                        app:layout_constraintTop_toTopOf="@id/tvMainTitle" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:gravity="left"
+                        android:text="当前号码17700001234，有3个号码共享此套餐"
+                        android:textColor="@color/white"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="@id/tvMainTitle"
+                        app:layout_constraintTop_toBottomOf="@id/tvMainTitle" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="@android:color/transparent"
+                    android:elevation="0dp"
+                    android:minHeight="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
-                    android:textColor="#333333"
-                    app:title="流量查询"
-                    app:right_src="@drawable/service"
-                    app:back_src="@drawable/arrow_white"
-                    app:imageHeight3="16dp"
-                    app:imageWidth3="8dp"
-                    app:right_imageWidth3="22dp"
-                    app:right_imageHeight3="20dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"/>
-            </LinearLayout>
+                    app:tabIndicatorColor="#ffffff"
+                    app:tabIndicatorFullWidth="false"
+                    app:tabIndicatorGravity="bottom"
+                    app:tabIndicatorHeight="4dp"
+                    app:tabMinWidth="50dp"
+                    app:tabMode="fixed"
+                    app:tabSelectedTextColor="@color/white"
+                    app:tabTextColor="@color/white" />
 
 
+            </com.google.android.material.appbar.AppBarLayout>
 
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabLayout"
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewPager"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:elevation="0dp"
-                android:minHeight="?attr/actionBarSize"
-                android:paddingBottom="5dp"
-                app:layout_collapseMode="pin"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:tabIndicator="@drawable/shape_tab_indicator"
-                app:tabIndicatorColor="#1990ff"
-                app:tabIndicatorFullWidth="false"
-                app:tabIndicatorGravity="bottom"
-                app:tabIndicatorHeight="4dp"
-                app:tabMinWidth="50dp"
-                app:tabMode="scrollable"
-                app:tabPaddingBottom="3dp" />
+                android:layout_height="match_parent"
+                android:background="@color/gray_200"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-       <androidx.viewpager.widget.ViewPager
-             android:id="@+id/viewPager"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
