--- a/app/src/main/res/layout/item_province.xml
+++ b/app/src/main/res/layout/item_province.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/tvProvince"
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical" />
+        android:layout_gravity="center_vertical"
+        android:text="国内通用流量"
+        tools:text="@sample/collections"
+        />
 
     <!-- 标识该 Item 的子列表是否展开，图片是 → ，通过旋转控制状态 -->
     <ImageView
@@ -16,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|end"
-        android:src="@drawable/auto_recharge" />
+        android:src="@drawable/arrow_down"
+        tools:src="@sample/collections"/>
 
 </FrameLayout>
