--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray_cccccc">#cccccc</color>
     <color name="gray_C4C4C4">#C4C4C4</color>
+    <color name="gray_e4e4e4">#E4E4E4</color>
+    <color name="gray_999999">#999999</color>
+    <color name="gray_e1e1e1">#e1e1e1</color>
     <color name="blue">#0000ff</color>
     <color name="blue_3399ff">#3399ff</color>
     <color name="red">#ff0000</color>
@@ -31,4 +34,9 @@
     <color name="blue_4d1ee2ff">#4d1ee2ff</color>
     <color name="gray_80000000">#80000000</color>
     <color name="gray_f8f8f8">#f8f8f8</color>
+    <color name="gray_e0e0e0">#e0e0e0</color>
+    <color name="blue_1990ff">#1990FF</color>
+    <color name="red_e64b4b">#E64B4B</color>
+    <color name="white_f2f2f2">#f2f2f2</color>
+    <color name="blue_1C8EFE">#1C8EFE</color>
 </resources>
