多级列表的完善

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,4 +39,6 @@
     <color name="red_e64b4b">#E64B4B</color>
     <color name="white_f2f2f2">#f2f2f2</color>
     <color name="blue_1C8EFE">#1C8EFE</color>
+    <color name="gray_b4b4b4">#b4b4b4</color>
+    <color name="yellow_fff5e7">#FFF5E7</color>
 </resources>
