--- a/app/src/main/res/layout/fragment_data_usage.xml
+++ b/app/src/main/res/layout/fragment_data_usage.xml
@@ -17,6 +17,60 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
 
+        <RelativeLayout
+            android:id="@+id/rlWarn"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="@drawable/bg_orange_radius_8"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/ivClose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:padding="6dp"
+                android:contentDescription="关闭"
+                android:src="@drawable/ic_orange_close" />
+
+            <ImageView
+                android:id="@+id/ivIcon"
+                android:layout_width="39dp"
+                android:layout_height="39dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="3.5dp" />
+
+            <TextView
+                android:id="@+id/tvWarnTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="7dp"
+                android:layout_toRightOf="@id/ivIcon"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:textColor="@color/black_333333"
+                android:textSize="12dp"
+                tools:text="亲你的流量亲你的流量亲你的流量亲你的流量" />
+
+            <Button
+                android:id="@+id/btnWarn"
+                android:layout_width="63dp"
+                android:layout_height="25dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_orange_btn"
+                android:maxLength="4"
+                android:textColor="@color/white"
+                android:textSize="12dp"
+                tools:text="加流量啊" />
+        </RelativeLayout>
+
 
     
     <ImageView
@@ -25,7 +79,7 @@
         android:layout_marginStart="16dp"
         android:src="@drawable/rounded_rectangle"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tvTitle"
+        app:layout_constraintTop_toBottomOf="@id/rlWarn"
         app:layout_constraintBottom_toBottomOf="@id/tvTitle"
         />
 
