--- a/app/src/main/res/layout/item_normal_meal.xml
+++ b/app/src/main/res/layout/item_normal_meal.xml
@@ -45,11 +45,15 @@
 
                 <ImageView
                     android:id="@+id/ivTips"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_marginTop="1dp"
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
                     android:background="@drawable/ic_meal_question_gray"
                     android:contentDescription="说明"
                     app:layout_constraintLeft_toRightOf="@+id/tvTitle"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -58,13 +62,24 @@
                 android:id="@+id/tvExpand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:drawableRight="@drawable/arrow_down"
                 android:drawablePadding="4.5dp"
+                android:layout_toLeftOf="@id/ivExpand"
+                android:layout_marginEnd="4.5dp"
                 android:text="展开详情"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"
                 android:textColor="@color/gray_999999"
                 android:textSize="12dp"
                 android:contentDescription="说明"
+                />
+
+            <ImageView
+                android:id="@+id/ivExpand"
+                android:layout_width="10.5dp"
+                android:layout_height="6dp"
+                android:layout_centerVertical="true"
+                android:src="@drawable/arrow_down"
+                android:layout_alignParentRight="true"
                 />
         </RelativeLayout>
 
