--- a/app/src/main/res/layout/item_normal_meal_son.xml
+++ b/app/src/main/res/layout/item_normal_meal_son.xml
@@ -78,8 +78,8 @@
             <ImageView
                 android:id="@+id/ivTips"
                 android:background="@drawable/ic_meal_question_gray"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
                 android:layout_marginTop="1dp"
                 android:layout_marginLeft="3dp"
                 android:layout_toRightOf="@id/tvTitle"
@@ -266,8 +266,8 @@
 
     <ImageView
         android:id="@+id/ivInvalid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="19dp"
