--- a/app/src/main/res/layout/fragment_data_usage.xml
+++ b/app/src/main/res/layout/fragment_data_usage.xml
@@ -1,40 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-
-    >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="13dp"
-        android:layout_marginEnd="13dp"
         android:layout_marginTop="14dp"
+        android:layout_marginEnd="13dp"
         android:background="@drawable/shape_rectangle_white"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
             android:id="@+id/rlWarn"
             android:layout_width="match_parent"
             android:layout_height="65dp"
+            android:layout_marginStart="14dp"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="14dp"
+            android:background="@drawable/bg_orange_radius_8"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:background="@drawable/bg_orange_radius_8"
-            android:visibility="gone">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/ivClose"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_alignParentRight="true"
-                android:padding="6dp"
                 android:contentDescription="关闭"
+                android:padding="6dp"
                 android:src="@drawable/ic_orange_close" />
 
             <ImageView
@@ -42,7 +42,8 @@
                 android:layout_width="39dp"
                 android:layout_height="39dp"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="3.5dp" />
+                android:layout_marginLeft="3.5dp"
+                android:src="@drawable/robot" />
 
             <TextView
                 android:id="@+id/tvWarnTitle"
@@ -51,119 +52,289 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="7dp"
                 android:layout_toRightOf="@id/ivIcon"
-                android:maxLines="2"
                 android:ellipsize="end"
+                android:maxLines="2"
                 android:textColor="@color/black_333333"
                 android:textSize="12dp"
-                tools:text="亲你的流量亲你的流量亲你的流量亲你的流量" />
+                tools:text="亲你的流量已用光~" />
 
-            <Button
+            <TextView
                 android:id="@+id/btnWarn"
-                android:layout_width="63dp"
-                android:layout_height="25dp"
+                android:layout_width="83dp"
+                android:layout_height="32dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/bg_orange_btn"
+                android:background="@drawable/recharge_data"
+                android:gravity="center"
+                android:paddingLeft="14dp"
+                android:paddingRight="14dp"
                 android:maxLength="4"
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
+                android:paddingBottom="8dp"
                 android:textColor="@color/white"
                 android:textSize="12dp"
-                tools:text="加流量啊" />
+                tools:text="加流量" />
         </RelativeLayout>
 
 
-    
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="9dp"
-        android:layout_marginStart="16dp"
-        android:src="@drawable/rounded_rectangle"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rlWarn"
-        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
-        />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="9dp"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/rounded_rectangle"
+            app:layout_constraintBottom_toBottomOf="@id/tvMealOver"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tvMealOver" />
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="已订购流量"
-        android:textColor="@color/black_333333"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginBottom="@dimen/dp_10"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/recyclerView"
-        />
+        <TextView
+            android:id="@+id/tvMealOver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="29dp"
+            android:layout_marginTop="20.5dp"
+            android:layout_marginBottom="@dimen/dp_10"
+            android:text="超出套餐流量"
+            android:textColor="@color/black_333333"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/llbg"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rlWarn" />
+
+        <LinearLayout
+            android:id="@+id/llbg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="14dp"
+            android:background="@drawable/bg_gray_stroke_8"
+            android:orientation="vertical"
+            android:paddingHorizontal="13dp"
+            android:paddingBottom="15dp"
+            app:layout_constraintBottom_toTopOf="@id/tvTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvMealOver">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="11dp">
 
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@id/ivExpand">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_marginStart="14dp"
-        android:layout_marginEnd="14dp"
-        android:layout_height="wrap_content"
-        tools:itemCount="3"
-        tools:listitem="@layout/item_province"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/recyclerView2"
-    />
+                    <TextView
+                        android:id="@+id/tvOverTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:textColor="@color/gray_666666"
+                        android:textSize="13dp"
+                        app:layout_constraintHorizontal_bias="0"
+                        app:layout_constraintHorizontal_chainStyle="packed"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toLeftOf="@id/ivTips"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="国内通用流量" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView2"
-        android:layout_width="match_parent"
-        android:layout_marginStart="14dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginTop="16dp"
-        android:visibility="gone"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape_rectangle_outline"
-        tools:itemCount="3"
-        tools:listitem="@layout/item_province"
-        app:layout_constraintTop_toBottomOf="@id/recyclerView"
-        app:layout_constraintLeft_toLeftOf="parent"
+                    <ImageView
+                        android:id="@+id/ivTips"
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:layout_marginTop="1dp"
+                        android:adjustViewBounds="true"
+                        android:background="@drawable/ic_meal_question_gray"
+                        android:contentDescription="说明"
+                        android:scaleType="fitXY"
+                        android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@+id/tvOverTitle"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-        />
+
+                <ImageView
+                    android:id="@+id/ivExpand"
+                    android:layout_width="62dp"
+                    android:layout_height="18dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/over_money" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/llUsedAmount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tvUsageAmountPercent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:text="已超出"
+                            android:textColor="@color/gray_999999"
+                            android:textSize="12dp" />
+
+                        <ImageView
+                            android:id="@+id/ivUsageMark"
+                            android:layout_width="wrap_content"
+                            android:layout_height="11dp"
+                            android:layout_marginLeft="3dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitXY"
+                            android:visibility="gone" />
+
+                    </LinearLayout>
+
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center">
+
+                        <TextView
+                            android:id="@+id/tvUsageAmount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:textColor="@color/black_333333"
+                            android:textSize="25dp"
+                            android:textStyle="bold"
+                            tools:text="1.92" />
+
+                        <TextView
+                            android:id="@+id/tvUnit"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignBaseline="@id/tvUsageAmount"
+                            android:layout_marginLeft="4dp"
+                            android:layout_toRightOf="@id/tvUsageAmount"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:textColor="@color/black_333333"
+                            android:textSize="12dp"
+                            android:textStyle="bold"
+                            tools:text="GB" />
+                    </RelativeLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="9dp"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/rounded_rectangle"
+            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tvTitle" />
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="29dp"
+            android:layout_marginTop="20.5dp"
+            android:layout_marginBottom="@dimen/dp_10"
+            android:text="已订购流量"
+            android:textColor="@color/black_333333"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/recyclerView"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/llbg" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="14dp"
+            app:layout_constraintBottom_toTopOf="@id/recyclerView2"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_province" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="14dp"
+            android:background="@drawable/shape_rectangle_outline"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/recyclerView"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_province"
+
+            />
 
         <TextView
             android:id="@+id/tvBottomTitle"
             android:layout_width="match_parent"
             android:layout_height="37dp"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="15dp"
+            android:gravity="left"
             android:text="1、新订购流量的展示会有一定延迟，如有请稍后再查。
            2、结转流量，是上月未使用完、且可在本月继续"
             android:textColor="@color/black_999999"
             android:textSize="13sp"
-            android:gravity="left"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="11dp"
-            app:layout_constraintTop_toBottomOf="@id/recyclerView2"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/recyclerView2"
+            app:layout_constraintBottom_toTopOf="@id/tvRecharge"
 
             />
-        
+
         <TextView
+            android:id="@+id/tvRecharge"
             android:layout_width="220dp"
             android:layout_height="38dp"
-            android:text="充流量"
-            android:gravity="center"
-            android:textColor="@color/white"
             android:layout_marginTop="30dp"
-            android:textSize="14sp"
             android:layout_marginBottom="26dp"
             android:background="@drawable/shape_rectangle_button"
-            app:layout_constraintTop_toBottomOf="@id/tvBottomTitle"
+            android:gravity="center"
+            android:text="充流量"
+            android:textColor="@color/white"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            />
+            app:layout_constraintTop_toBottomOf="@id/tvBottomTitle" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
