--- a/app/src/main/res/layout/item_normal_meal.xml
+++ b/app/src/main/res/layout/item_normal_meal.xml
@@ -49,6 +49,7 @@
                     android:layout_height="18dp"
                     android:layout_marginTop="1dp"
                     android:scaleType="fitXY"
+                    android:padding="15dp"
                     android:adjustViewBounds="true"
                     android:background="@drawable/ic_meal_question_gray"
                     android:contentDescription="说明"
@@ -225,8 +226,5 @@
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
-
-
 </LinearLayout>
