--- a/app/src/main/res/layout/fragment_data_usage.xml
+++ b/app/src/main/res/layout/fragment_data_usage.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
-
-
-
-
-
-
-
-
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerOverView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="14dp"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_province" />
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -25,23 +27,9 @@
             android:layout_marginEnd="14dp"
             tools:itemCount="3"
             tools:listitem="@layout/item_province" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="14dp"
-            android:background="@drawable/shape_rectangle_outline"
-            android:visibility="gone"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recyclerView"
-            tools:itemCount="3"
-            tools:listitem="@layout/item_province"
-
-            />
+    </LinearLayout>
 
 
 
-</LinearLayout>
+
+</androidx.core.widget.NestedScrollView>
