--- a/app/src/main/res/layout/item_normal_meal_son.xml
+++ b/app/src/main/res/layout/item_normal_meal_son.xml
@@ -71,7 +71,7 @@
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
                 app:layout_constraintLeft_toRightOf="@+id/tvTitle"
-                app:layout_constraintRight_toRightOf="@id/ivTips"
+                app:layout_constraintRight_toLeftOf="@id/ivTips"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -81,7 +81,7 @@
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 android:layout_marginTop="1dp"
-                android:layout_marginLeft="3dp"
+                android:layout_marginLeft="2dp"
                 android:layout_toRightOf="@id/tvTitle"
                 android:contentDescription="说明"
                 app:layout_constraintLeft_toRightOf="@+id/ivTransfer"
@@ -266,8 +266,8 @@
 
     <ImageView
         android:id="@+id/ivInvalid"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="19dp"
