--- a/app/src/main/res/layout/recyclview_head_over.xml
+++ b/app/src/main/res/layout/recyclview_head_over.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="9dp"
-        android:layout_marginStart="16dp"
         android:src="@drawable/rounded_rectangle"
         app:layout_constraintBottom_toBottomOf="@id/tvMealOver"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -18,15 +17,26 @@
         android:id="@+id/tvMealOver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="29dp"
         android:layout_marginTop="20.5dp"
         android:layout_marginBottom="@dimen/dp_10"
+        android:layout_marginStart="12dp"
         android:text="已订购流量"
         android:textColor="@color/black_333333"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="1dp"
+        android:src="@drawable/description_blue"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="@id/tvMealOver"
+        app:layout_constraintLeft_toRightOf="@id/tvMealOver"
+        app:layout_constraintTop_toTopOf="@id/tvMealOver" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
