--- a/app/src/main/res/layout/activity_data_usage.xml
+++ b/app/src/main/res/layout/activity_data_usage.xml
@@ -16,7 +16,9 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="190dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
             android:background="@drawable/top_background" />
 
         <com.example.myapplication.widget.CustomTitleBarViewGroup
@@ -43,7 +45,7 @@
             android:id="@+id/coordinator"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="62dp"
+            android:layout_marginTop="76dp"
             app:layout_constraintLeft_toLeftOf="@id/tvTitle"
             app:layout_constraintTop_toBottomOf="@id/tvTitle">
 
@@ -66,7 +68,7 @@
                         android:id="@+id/tvMainTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="10dp"
                         android:gravity="center"
                         android:text="乐享4G套餐59元"
                         android:textColor="#fffbf7"
@@ -91,6 +93,7 @@
                         android:text="当前号码17700001234，有3个号码共享此套餐"
                         android:textColor="@color/white"
                         android:textSize="12sp"
+                        android:layout_marginTop="6dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="@id/tvMainTitle"
                         app:layout_constraintTop_toBottomOf="@id/tvMainTitle" />
@@ -100,16 +103,18 @@
                 <com.google.android.material.tabs.TabLayout
                     android:id="@+id/tabLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="30dp"
                     android:background="@android:color/transparent"
                     android:elevation="0dp"
                     android:minHeight="?attr/actionBarSize"
+                    android:layout_centerVertical="true"
+                    android:layout_marginHorizontal="13dp"
+                    app:tabIndicator="@drawable/shape_tab_indicator_usage"
                     app:layout_collapseMode="pin"
+                    android:layout_marginBottom="5dp"
                     app:tabIndicatorColor="#ffffff"
                     app:tabIndicatorFullWidth="false"
                     app:tabIndicatorGravity="bottom"
-                    app:tabIndicatorHeight="4dp"
-                    app:tabMinWidth="50dp"
                     app:tabMode="fixed"
                     app:tabSelectedTextColor="@color/white"
                     app:tabTextColor="@color/white" />
