--- a/app/src/main/res/layout/fragment_data_usage.xml
+++ b/app/src/main/res/layout/fragment_data_usage.xml
@@ -4,10 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="13dp"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/shape_rectangle_white"
         android:orientation="vertical">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerOverView"
@@ -15,6 +19,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="14dp"
+            android:layout_marginTop="14dp"
+            android:overScrollMode="never"
             tools:itemCount="3"
             tools:listitem="@layout/item_province" />
 
@@ -25,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="14dp"
+            android:overScrollMode="never"
             tools:itemCount="3"
             tools:listitem="@layout/item_province" />
     </LinearLayout>
