--- a/app/src/main/res/layout/recyclview_head.xml
+++ b/app/src/main/res/layout/recyclview_head.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:id="@+id/rlWarn"
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="14dp"
         android:background="@drawable/bg_orange_radius_8"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -69,7 +66,6 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="9dp"
-        android:layout_marginStart="16dp"
         android:src="@drawable/rounded_rectangle"
         app:layout_constraintBottom_toBottomOf="@id/tvMealOver"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -79,14 +75,25 @@
         android:id="@+id/tvMealOver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="29dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="20.5dp"
-        android:layout_marginBottom="@dimen/dp_10"
         android:text="超出套餐流量"
         android:textColor="@color/black_333333"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rlWarn" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="超出费用 >"
+        android:textColor="#1990ff"
+        android:textSize="13sp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tvMealOver"
+        app:layout_constraintBottom_toBottomOf="@id/tvMealOver"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
