--- a/app/src/main/res/layout/item_normal_meal.xml
+++ b/app/src/main/res/layout/item_normal_meal.xml
@@ -45,16 +45,10 @@
 
                 <ImageView
                     android:id="@+id/ivTips"
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:layout_marginStart="2dp"
-                    android:layout_marginTop="1dp"
-                    android:adjustViewBounds="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/ic_meal_question_gray"
                     android:contentDescription="说明"
-                    android:padding="15dp"
-                    android:scaleType="fitXY"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/tvTitle"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
