--- a/app/src/main/res/layout/item_normal_meal_son.xml
+++ b/app/src/main/res/layout/item_normal_meal_son.xml
@@ -78,16 +78,15 @@
             <ImageView
                 android:id="@+id/ivTips"
                 android:background="@drawable/ic_meal_question_gray"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_marginTop="1dp"
-                android:layout_marginLeft="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/tvTitle"
                 android:contentDescription="说明"
                 app:layout_constraintLeft_toRightOf="@+id/ivTransfer"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
