--- a/app/src/main/res/layout/recyclview_head.xml
+++ b/app/src/main/res/layout/recyclview_head.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
         android:id="@+id/rlWarn"
@@ -43,24 +44,18 @@
             android:textSize="12dp"
             android:text="亲你的流量已用光~" />
 
-        <TextView
+        <Button
             android:id="@+id/btnWarn"
-            android:layout_width="83dp"
-            android:layout_height="32dp"
+            android:layout_width="63dp"
+            android:layout_height="25dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
-            android:background="@drawable/recharge_data"
-            android:gravity="center"
-            android:paddingLeft="14dp"
-            android:paddingRight="14dp"
+            android:background="@drawable/bg_orange_btn"
             android:maxLength="4"
-            android:paddingStart="3dp"
-            android:paddingEnd="3dp"
-            android:paddingBottom="8dp"
             android:textColor="@color/white"
             android:textSize="12dp"
-            android:text="加流量" />
+            tools:text="加流量啊" />
     </RelativeLayout>
 
     <ImageView
