--- a/app/src/main/res/layout/widget_multiple_item_recharge.xml
+++ b/app/src/main/res/layout/widget_multiple_item_recharge.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="10dp"
     app:cardElevation="0dp"
+    android:id="@+id/cvRecharge"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
