--- a/app/src/main/res/layout/fragment_helper.xml
+++ b/app/src/main/res/layout/fragment_helper.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
-            android:text="Helper"
+            android:text="Helper555"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
